# NovyUI

./: .gitignore  .mcp-full.json  .mcp.json  ACCORDION_COMPLETE.md  AUDIT_COMPLETION_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_AUDIT_REPORT.md  INPUT_COMPONENT_SUMMARY.md  KBD_COMPONENT_SUMMARY.md  MIGRATION_CONTEXT.md  MIGRATION_PROGRESS.md  MIGRATION_REVIEW_FINDINGS.md  PHASE_BY_PHASE_ASSESSMENT.md  README.md  SELECT_STORIES_TODO.md  SELECT_USAGE_GUIDE.md  TECHNICAL_DECISIONS.md  WORKSPACE_MIGRATION_STATUS.md  accordion-implementation-summary.md  accordion-validation-checklist.md  blocks.md  components.md  deno.json  design-system.md  doc-structure.md  fix-links.js  package-lock.json  pages.md  test-accordion.html  test-mcp.json  todo-ai.md  tsconfig.json  updated_blocks.md  updated_pages.md
moonzoon-novyui/: Cargo.toml  README.md
moonzoon-novyui/frontend/src/: main.rs
moonzoon-novyui/frontend/src/components/: accordion.rs  alert.rs  avatar.rs  badge.rs  button.rs  card.rs  checkbox.rs  fileinput.rs  icon.rs  input.rs  kbd.rs  list.rs  mod.rs  pattern.rs  select.rs  switch.rs  textarea.rs  treeview.rs  typography.rs
moonzoon-novyui/frontend/src/stories/: accordion_story.rs  alert_story.rs  (+20 more)
moonzoon-novyui/moonzoon-novyui/: Cargo.toml  README.md
moonzoon-novyui/moonzoon-novyui-storybook/: Cargo.toml  README.md
moonzoon-novyui/moonzoon-novyui-storybook/frontend/: Cargo.toml
moonzoon-novyui/moonzoon-novyui-storybook/public/: index.html
moonzoon-novyui/moonzoon-novyui-storybook/tests/: responsive.spec.js
moonzoon-novyui/public/patterns/: heropatterns-license.txt
(+563 files in other folders)
