[workspace]
members = [
    "moonzoon-novyui",
    "moonzoon-novyui-storybook/frontend",
    "moonzoon-novyui-storybook/backend",
    "moonzoon-novyui-storybook/shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85"

[workspace.dependencies]
moon = { git = "https://github.com/MoonZoon/MoonZoon", branch = "main" }
zoon = { git = "https://github.com/MoonZoon/MoonZoon", branch = "main" }
