[workspace]
members = [
    "frontend",
    "backend", 
    "shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85"

[workspace.dependencies]
moon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "4428421b26fbb8b62670c44d911c9ba4c7f0c11b" }
zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "4428421b26fbb8b62670c44d911c9ba4c7f0c11b" }
moonzoon-novyui = { path = "../moonzoon-novyui" }
